footer part added

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     padding-bottom: 182px;
     padding-left: 130px;
 }
+
+.footer-height{
+    height: 200px;
+}
 /* .course-header-width{
     width: 606px;
     height: 190px;
