--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@
 .footer-height{
     height: 200px;
 }
+.bg{
+    background: #289BDE;
+}
 /* .course-header-width{
     width: 606px;
     height: 190px;
